// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigTitle renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 10,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 22,
          "fontWeight": "bold",
        },
        Object {
          "color": "rgb(28, 28, 30)",
        },
      ]
    }
  >
    $_TITLE_TEXT_$
  </Text>
</View>
`;

exports[`BigTitle renders correctly with the See More option 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 10,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 10,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 22,
          "fontWeight": "bold",
        },
        Object {
          "color": "rgb(28, 28, 30)",
        },
      ]
    }
  >
    $_TITLE_TEXT_$
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Object {
            "color": "rgb(28, 28, 30)",
          },
        ]
      }
    >
      See more
    </Text>
  </View>
</View>
`;
